Remplacé th:include par th:replace pour préparer thymeleaf 3
https://github.com/thymeleaf/thymeleaf/issues/405

--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -116,6 +116,6 @@
 		</th:block>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
-	<footer th:include="include::footer"></footer>
+	<footer th:replace="include::footer"></footer>
 </body>
 </html>
