--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -90,6 +90,6 @@
 		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
-	<footer th:include="include::footer"></footer>
+	<footer th:replace="include::footer"></footer>
 </body>
 </html>
