--- a/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
@@ -47,6 +47,6 @@
 		<div th:replace="includeForm :: commentaire"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
-	<footer th:include="include::footer"></footer>
+	<footer th:replace="include::footer"></footer>
 </body>
 </html>
