--- a/src/main/resources/templates/ruche/rucheTypeForm.html
+++ b/src/main/resources/templates/ruche/rucheTypeForm.html
@@ -60,6 +60,6 @@
 		</div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
-	<footer th:include="include::footer"></footer>
+	<footer th:replace="include::footer"></footer>
 </body>
 </html>
