--- a/src/main/resources/templates/rucher/rucherCommentaireForm.html
+++ b/src/main/resources/templates/rucher/rucherCommentaireForm.html
@@ -52,6 +52,6 @@
 		<div th:replace="includeForm :: notifDelaiField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
-	<footer th:include="include::footer"></footer>
+	<footer th:replace="include::footer"></footer>
 </body>
 </html>
