--- a/src/main/resources/templates/hausse/hausseRemplissageForm.html
+++ b/src/main/resources/templates/hausse/hausseRemplissageForm.html
@@ -66,6 +66,6 @@
 		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
-	<footer th:include="include::footer"></footer>
+	<footer th:replace="include::footer"></footer>
 </body>
 </html>
