jquery 3.6.3 et couleur de fond titre accueil

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 		<header class="col jumbotron jumbotron-fluid">
 			<div class="container-fluid">
 				<h1 
-					id="titre" class="elegantshd display-4 text-primary"
+					id="titre" class="display-4 elegantshd"
 					th:utext="${@environment.getProperty('accueil.titre')}"></h1>
 			</div>
 		</header>
