--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -100,7 +100,7 @@ $().ready(function() {
         	</div>
         </div>
     </div>
-	<div class="container-fluid table-responsive">
+	<div class="container-fluid table-responsive" id="ruche">
 		<table class="table table-sm table-bordered">			
 		<thead>
 			<tr>
