--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -104,7 +104,7 @@ $().ready(function() {
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid table-responsive">
+	<div class="container-fluid table-responsive" id="hausse">
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
