--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -22,7 +22,7 @@
 	<br />
 	<br />
 	<br />
-	<div class="container-fluid">
+	<div class="container-fluid" id="info">
 		<div class="row">
 			<h1 class="item"
 				th:utext="${@environment.getProperty('accueil.titre')}"></h1>
