--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -6,7 +6,7 @@
 	const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 	const listeRuches = /*[[#{listeRuches}]]*/ null;
 	$(document).ready(function() {
-	    new DataTable('#ruches', {
+	    new DataTable('#ruchesplus', {
 	        dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
 		    buttons: [
 		    	'csv',
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-sm table-bordered table-striped dt-responsive" id="ruches">
+		<table class="table table-sm table-bordered table-striped dt-responsive" id="ruchesplus">
 			<thead>
 				<tr>
 					<th style="background-color:LightGoldenRodYellow" th:text="#{nom}"></th>
