--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -88,7 +88,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid table-responsive">
+	<div class="container-fluid table-responsive" id="detailEssaim">
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
