--- a/src/main/resources/templates/evenement/evenementDetail.html
+++ b/src/main/resources/templates/evenement/evenementDetail.html
@@ -64,7 +64,7 @@ $(document).ready(function() {
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid table-responsive">
+	<div class="container-fluid table-responsive" id="detailEvenement">
 		<table class="table table-sm table-bordered table-striped"
 			id="evenements">
 			<thead>
