--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -40,7 +40,7 @@ $().ready(function() {
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid table-responsive">
+	<div class="container-fluid table-responsive" id="detailPersonne">
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
