--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered">
+		<table class="table table-bordered" id="transhumances">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
