--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -38,7 +38,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered">
+		<table class="table table-bordered" id="transhumances">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
