Tests selenium recolte et lots, modif code traitement lot passage des ids au lieu des noms

--- a/src/main/resources/templates/essaim/essaimSucreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreLotForm.html
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<form action="#"
-		th:action="@{'/evenement/essaim/sauve/lot/' + ${essaimsNoms}}"
+		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}"
 		method="post" id="evenementForm">
 		<input type="hidden" id="typeEvenement" name="typeEvenement"
 			value="ESSAIMSUCRE" />
