--- a/src/main/resources/templates/essaim/essaimTraitementLotForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementLotForm.html
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 	<form action="#"
-		th:action="@{'/evenement/essaim/sauve/lot/' + ${essaimsNoms}}"
+		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}"
 		method="post" id="evenementForm">
 		<input type="hidden" id="valeur" name="valeur" /> <input type="hidden"
 			id="typeEvenement" name="typeEvenement" value="ESSAIMTRAITEMENT" />
