--- a/src/main/resources/templates/hausse/hausseCommentaireLotForm.html
+++ b/src/main/resources/templates/hausse/hausseCommentaireLotForm.html
@@ -38,7 +38,7 @@
 			</h1>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/hausse/sauve/lot/'+${haussesNoms}}"
+	<form action="#" th:action="@{'/evenement/hausse/sauve/lot/'+${hIds}}"
 		method="post" id="evenementForm">
 		<input type="hidden" id="valeur" name="valeur" />
 		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIREHAUSSE" />
