--- a/src/main/resources/templates/ruche/rucheCommentaireLotForm.html
+++ b/src/main/resources/templates/ruche/rucheCommentaireLotForm.html
@@ -40,7 +40,7 @@
 			</div>
 		</div>
     </div> 
-    <form action="#" th:action="@{'/evenement/ruche/sauve/lot/' + ${ruchesNoms}}"
+    <form action="#" th:action="@{'/evenement/ruche/sauve/lot/' + ${rIds}}"
 		method="post" id="evenementForm">
 		<input type="hidden" id="valeur" name="valeur" />
 		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIRERUCHE" />
