--- a/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
@@ -40,7 +40,7 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve/lot/' + ${essaimsNoms}}"
+	<form action="#" th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}"
 		method="post" id="evenementForm">
 		<input type="hidden" id="valeur" name="valeur" />
 		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIREESSAIM" />
