--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
 <script th:inline="javascript">
 	function showhidepass() {
-		let x = document.getElementById("password");
+		const x = document.getElementById("password");
 		if (x.type === "password") {
 			x.type = "text";
 		} else {
