--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -3,36 +3,40 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
-$().ready(function() {
-	let tableajout = new DataTable('#ajoutRuches', {
-		select: {style: 'multi+shift'}
-    });
-	new DataTable('#retraitRuches', {
-    });
-	function updateLinkAjout( e, dt, type, indexes ) {
-    	if ( type === 'row' ) {
-    		let rucheNoms = "";
-    		tableajout.rows( { selected: true } ).data().pluck( 0 ).each(function (value, index) {
-            	rucheNoms += value + ",";
-            });
-            if (rucheNoms) { 
-            	/*[- On enlève la dernière virgule et met à jour l'url de traitement -]*/
-            	rucheNoms = rucheNoms.substring(0, rucheNoms.length-1);
-            	$('#actionAjoutRuches').attr('href',
-            			[[@{/rucher/ruches/ajouter/}]] +
-            			[[${rucher.id}]] + '/' + rucheNoms);
-            } else {
-            	$('#actionAjoutRuches').attr('href', "#actionAjoutRuches");
-            }      
-        }
-	}
-    tableajout.on( 'select deselect', updateLinkAjout);
-    $('#actionAjoutRuches').on('click', function () {
-    	if ($(this).attr("href") == "#actionAjoutRuches") {
-    		alert([[#{selectruchesajout}]]);	
-    	}
-    });
-});
+	const urlAjout = /*[[@{/rucher/ruches/ajouter/}]]*/null;
+	const rucherId = /*[[${rucher.id}]]*/null;
+	const selRuchesAjout = /*[[#{selectruchesajout}]]*/null;
+	$().ready(function() {
+		let tableajout = new DataTable('#ajoutRuches', {
+			select : {
+				style : 'multi+shift'
+			}
+		});
+		new DataTable('#retraitRuches', {});
+		function updateLinkAjout(e, dt, type, indexes) {
+			if (type === 'row') {
+				let rucheIds = "";
+				tableajout.rows({
+					selected : true
+				}).data().pluck(1).each(function(value, index) {
+					rucheIds += value + ",";
+				});
+				if (rucheIds) {
+					/*[- On enlève la dernière virgule et met à jour l'url de traitement -]*/
+					rucheIds = rucheIds.substring(0, rucheIds.length - 1);
+					$('#actionAjoutRuches').attr('href', urlAjout + rucherId + '/' + rucheIds);
+				} else {
+					$('#actionAjoutRuches').attr('href', "#actionAjoutRuches");
+				}
+			}
+		}
+		tableajout.on('select deselect', updateLinkAjout);
+		$('#actionAjoutRuches').on('click', function() {
+			if ($(this).attr("href") == "#actionAjoutRuches") {
+				alert(selRuchesAjout);
+			}
+		});
+	});
 </script>
 </head>
 <body>
@@ -50,8 +54,10 @@ $().ready(function() {
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3543_3352760186}"
-				  class="bi bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
+				<a
+					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3543_3352760186}"
+					class="bi bi-book" th:title="#{Doc}" target="_blank"
+					aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -68,7 +74,7 @@ $().ready(function() {
 				</tr>
 			</tbody>
 		</table>
-		<br/>
+		<br />
 		<h6>
 			<a id="actionAjoutRuches" href="#actionAjoutRuches"
 				th:text="#{ajoutRuches}"></a>
@@ -77,12 +83,14 @@ $().ready(function() {
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
+					<th hidden></th>
 					<th th:text="#{rucher}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="rucheNot : ${ruchesNot}">
 					<td th:text="${rucheNot.nom}"></td>
+					<td hidden th:text="${rucheNot.id}"></td>
 					<td th:text="${rucheNot.rucher?.nom}"></td>
 				</tr>
 			</tbody>
