--- a/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
+++ b/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
@@ -5,10 +5,13 @@
 <link th:replace="include :: cssdatetimepicker"/>
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:inline="javascript">
+	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
+	const dateFirst = /*[[${dateFirst}]]*/null;
+	const timeFirst = /*[[${timeFirst}]]*/null;
 	$().ready(function() {
 		$.validator.addMethod( "greaterThanEqual", function( value, element, param ) {
 		    return Date.parse(value) > Date.parse(param);
-		}, [[#{doitEtreSupA}]] + ' {0}');		
+		}, doitEtreSupA + ' {0}');		
 		$("#evenementForm").validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
@@ -17,7 +20,7 @@
 			rules : {
 				date : {
 					required : true,
-					greaterThanEqual : [[${dateFirst}]] + ' ' + [[${timeFirst}]]
+					greaterThanEqual : dateFirst + ' ' + timeFirst
 				},
 				commentaire : {
 					maxlength : 255
@@ -25,8 +28,8 @@
 			}
 		});
 		$('#date').datetimepicker({
-			minDate: [[${dateFirst}]],
-			minTime: [[${timeFirst}]]
+			minDate: dateFirst,
+			minTime: timeFirst
 			});  
 	});
 </script>
@@ -50,7 +53,7 @@
         	</div>
         </div>
     </div>
-	<form action="#" th:action="@{'/rucher/ruches/ajouter/sauve/' + ${rucherId}} + '/' + ${ruchesNoms}"
+	<form action="#" th:action="@{'/rucher/ruches/ajouter/sauve/' + ${rucherId}} + '/' + ${rIds}"
 		method="post" id="evenementForm">
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
