--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -44,7 +44,7 @@
 				<a th:href="@{'/essaim/modifie/'+${essaim.id}}" class="bi bi-pencil"
 					th:title="#{modifier}" aria-hidden="true"></a> &nbsp; <span
 					id="clone" class="bi bi-collection cursorpointer"
-					th:title="#{cloner}" aria-hidden="true"></span> <a
+					th:title="#{cloner}" aria-hidden="true"></span> <a id="essaime"
 					th:href="@{'/essaim/essaime/'+${essaim.id}}"
 					class="bi bi-box-arrow-left" th:title="#{essaimer}"
 					aria-hidden="true"></a> <a id="assoRuche"
