correction bug ruche.toString si type == null, test dispersion

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -53,7 +53,7 @@
 					th:title="#{associationruche}" aria-hidden="true"></a> <a
 					id="supprime" th:href="@{'/essaim/supprime/'+${essaim.id}}"
 					class="bi bi-trash" style="color: red" th:title="#{supprimer}"
-					aria-hidden="true"></a> <a
+					aria-hidden="true"></a> <a id="descend"
 					th:href="@{'/essaim/descendance/'+${essaim.id}}"
 					class="bi bi-diagram-3" th:title="#{graphedescendance}"
 					aria-hidden="true"></a> <a
