--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
+<link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:inline="javascript">
+	const dateFirst = /*[[${dateFirst}]]*/null;
+	const timeFirst = /*[[${timeFirst}]]*/null;
+	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
 	$().ready(function() {
 		$.validator.addMethod( "greaterThanEqual", function( value, element, param ) {
-		    return Date.parse(value) > Date.parse(param);
-		}, [[#{doitEtreSupA}]] + ' {0}');		
+			return Date.parse(value) > Date.parse(param);
+		}, doitEtreSupA + ' {0}');		
 		$("#rucherId").focus();
 		$("#evenementForm").validate({
 			errorClass: 'erreur-form',
@@ -18,16 +22,17 @@
 			rules : {
 				date : {
 					required : true,
-					greaterThanEqual : [[${dateFirst}]] + ' ' + [[${timeFirst}]]
+					greaterThanEqual : dateFirst + ' ' + timeFirst
 				},
 				commentaire : {
 					maxlength : 255
 				}
 			}
 		});
+		
 		$('#date').datetimepicker({
-			minDate: [[${dateFirst}]],
-			minTime: [[${timeFirst}]]
+			minDate: dateFirst,
+			minTime: timeFirst
 		});  
 	});
 
@@ -42,25 +47,25 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-				<th:block th:text="#{changerDeRucher} + ' '"></th:block>
-				  <a th:href="@{'/ruche/'+${rucheId}}"
-					th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
-				</h1>	
-				<p th:text="#{ajouteeAuRucher(${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
-		        </p>
-        	</div>
-        </div>
-    </div>
+					<th:block th:text="#{changerDeRucher} + ' '"></th:block>
+					<a th:href="@{'/ruche/'+${rucheId}}"
+						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+				</h1>
+				<p
+					th:text="#{ajouteeAuRucher(${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
+				</p>
+			</div>
+		</div>
+	</div>
 	<form action="#" th:action="@{'/ruche/sauverucher/'+${rucheId}}"
 		method="post" id="evenementForm">
 		<div th:replace="includeForm :: date"></div>
 		<div class="form-floating mb-3">
-			<select class="form-control"
-				id="rucherId" name="rucherId" th:field="${ruche.rucher}">
+			<select class="form-control" id="rucherId" name="rucherId"
+				th:field="${ruche.rucher}">
 				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
-							th:text="${rucheropt.nom}"></option>
-			</select>
-			<label class="form-label" for="rucher" th:text="#{rucher}"></label>
+					th:text="${rucheropt.nom}"></option>
+			</select> <label class="form-label" for="rucher" th:text="#{rucher}"></label>
 		</div>
 		<div th:replace="includeForm :: commentaire"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
